# pythonagent

./: .gitignore  .gitmodules  .pylintrc  .releaserc  DEV-README.md  Dockerfile  Makefile  Pipfile  README.md  build_all_layers.sh  build_collector.sh  build_layer.sh  dev-requirements.txt  proto.sh  release.sh  requirements.txt  setup.cfg  setup.py  tox.ini  version.py
.github/workflows/: main.yml  merge.yml  release.yml
agent/: Agent.py  __init__.py
agent/config/: AgentConfig_default.py  __init__.py
agent/init/: AgentInit.py  __init__.py
agent/instrumentation/: __init__.py
autoinstrumentation/: setup.py
autoinstrumentation/tests/: requirements.txt
config/: AgentConfig.py  EnvironmentConfig.py  HypertraceConfig.py  __init__.py  agent-config.yaml  agent.ini  logger.py
docs/hypertrace/: env_var_settings.html  index.html  version.html
examples/: README.md
examples/autoinstrumentation/: Makefile  README.md  app.py  config.yaml  requirements.txt  server.py
examples/client/: Makefile  client.py  config.yaml  docker-compose-hypertrace.yml  requirements.txt
examples/flask/: Makefile  README.md  backend.py  config.yaml  docker-compose.yml  requirements.txt  test.sh  test_basic.py
examples/http/: README.md
hypertrace-instrumentation/: setup.cfg
instrumentation/: __init__.py
lambda_layer/: collector  collector.Dockerfile  collector.template.yaml  pypi.Dockerfile  source.Dockerfile  template.yaml
scripts/: test-all.out  test-all.sh
test/: agent.ini  flask_test.py  grpc_test_server.py  run_test.sh
tests/: __init__.py  conftest.py
(+400 files in other folders)
